CspCASL - more work on testing git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@7830 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/CspCASL/Makefile
+++ b/CspCASL/Makefile
@@ -42,4 +42,4 @@ testwrap:		$(SOURCES)
 			gmake -C .. CspCASL/testwrap
 
 test:			testwrap
-			./testwrap test test/tcs1.testcase test/tcs1.cspcasl test/tcs3.cspcasl
+			./testwrap test test/tcs1.testcase test/tcs1.cspcasl test/tcs3.cspcasl test
