CspCASL - debugging parser and tests git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@7853 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/CspCASL/Makefile
+++ b/CspCASL/Makefile
@@ -7,7 +7,7 @@
 
 GHCINCLUDES	=	..
 
-GHCOPTS		=	-Wall -fglasgow-exts -package base -package parsec -package fgl i$(GHCINCLUDES)
+GHCOPTS		=	-Wall -fglasgow-exts -package base -package parsec -package fgl -i$(GHCINCLUDES)
 
 BINS		=	testwrap
 
@@ -42,4 +42,7 @@ testwrap:		$(SOURCES)
 			gmake -C .. CspCASL/testwrap
 
 test:			testwrap
-			@./testwrap -t test/process.testcases
+			@./testwrap -c test/tcs3.cspcasl
+
+testi:
+			ghci $(GHCOPTS) testwrap
