added  to run AProVE. git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@7966 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/hets.in
+++ b/hets.in
@@ -38,9 +38,10 @@ fi
 HETS_OWL_PARSER=$INSTALL_PATH/lib/hets/
 UNIWISH=/usr/bin/wish
 HETS=$INSTALL_PATH/lib/hets/hets-$APP_VER
+HETS_APROVE=$INSTALL_PATH/lib/hets/java/AProVE.jar
 
 export HETS_LIB ISABELLE_HOME HETS_ISABELLE HETS_OWL_PARSER \
-    UNIWISH UNIDAVINCI UDG_HOME
+    UNIWISH UNIDAVINCI UDG_HOME HETS_APROVE
 
 if [ -d $INSTALL_PATH/lib/SPASS* ] ; then
     SPASS_DIR=`ls $INSTALL_PATH/lib/ | grep SPASS`
