BitString in use but the parser reverses the Strings when parses. Needs adjustment. git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@8044 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/GMP/Makefile
+++ b/GMP/Makefile
@@ -6,7 +6,7 @@ LD = --make
 RM = rm -rf
 
 all: Main.hs GMPAS.hs GMPParser.hs
-	$(CC) $(LD) $(FLAGS) Main.hs -fglasgow-exts
+	$(CC) $(LD) $(FLAGS) Main.hs 
 
 clean: 
 	$(RM) $(OBJS) $(ITF) Main
