Spliting and renaming concluded. git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@8083 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/GMP/Makefile
+++ b/GMP/Makefile
@@ -1,11 +1,11 @@
 FLAGS = #-Wall
-OBJS = GMPAS.o GMPParser.o ModalLogic.o Main.o ModalK.o ModalKD.o ModalInt.o ModalKar.o ModalBS.o Lexer.o GMPSAT.o
-ITF = GMPAS.hi GMPParser.hi ModalLogic.hi Main.hi ModalK.hi ModalKD.hi ModalInt.hi ModalKar.hi ModalBS.hi Lexer.hi GMPSAT.hi
+OBJS = GMPAS.o GMPParser.o ModalLogic.o Main.o ModalK.o ModalKD.o GradedML.o GenericML.o CoalitionL.o Lexer.o GMPSAT.o
+ITF = GMPAS.hi GMPParser.hi ModalLogic.hi Main.hi ModalK.hi ModalKD.hi GradedML.hi GenericML.hi CoalitionL.hi Lexer.hi GMPSAT.hi
 CC = ghc
 LD = --make
 RM = rm -rf
 
-all: Main.hs GMPAS.hs GMPParser.hs ModalLogic.hs ModalK.hs ModalKD.hs ModalInt.hs ModalKar.hs ModalBS.hs Lexer.hs GMPSAT.hs
+all: Main.hs GMPAS.hs GMPParser.hs ModalLogic.hs ModalK.hs ModalKD.hs GradedML.hs GenericML.hs CoalitionL.hs Lexer.hs GMPSAT.hs
 	$(CC) $(LD) $(FLAGS) Main.hs 
 
 clean: 
