Structure of make system changed. git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@8187 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/GMP/test/Makefile
+++ b/GMP/test/Makefile
@@ -1,6 +1,14 @@
-test: main
-	./runtests.sh;
+test: main k kd cl gml gen
 	cd ..; make clean
-
 main:
 	cd ..; make
+k:
+	./checkK.sh
+kd:
+	./checkKD.sh
+cl:
+	./checkCL.sh
+gml:
+	./checkGML.sh
+gen:
+	./checkGen.sh
