CspCASL - tests now use ndm's System.FilePath library git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@8250 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/CspCASL/Makefile
+++ b/CspCASL/Makefile
@@ -39,7 +39,7 @@ clean:
 nuke:			clean
 
 testwrap:		$(SOURCES)
-				gmake -C .. CspCASL/testwrap
+				make -C .. CspCASL/testwrap
 
 test:			testwrap
 				@./testwrap -c test/tcs3.cspcasl
