--- a/Driver/Version.in
+++ b/Driver/Version.in
@@ -1,5 +1,6 @@
-{-| 
+{- |
 Module      :  $Header$
+Description :  module for the hets version string
 Copyright   :  (c) Klaus Lüttich, Uni Bremen 2002-2005
 License     :  similar to LGPL, see HetCATS/LICENSE.txt or LIZENZ.txt
 
