--- a/Makefile.installer
+++ b/Makefile.installer
@@ -49,7 +49,7 @@ casl-lib-checkout :
 	if [ -d CASL-lib ] ; then \
 	  svn update ; \
 	 else \
-	  svn checkout https://$USER@svn-agbkb.informatik.uni-bremen.de/Hets-lib/trunc CASL-lib ; \
+	  svn checkout https://svn-agbkb.informatik.uni-bremen.de/Hets-lib/trunk CASL-lib ; \
         fi ; 
 	for x in $(find CASL-lib -name "*"); do  \
 	   if [ -f $x ] ; then       \
@@ -87,7 +87,7 @@ hetcats-make : tools-checkout
 	cd doc ; pdflatex UserGuide.tex ; cd - ;\
 	cp utils/hetcasl.sty doc/UserGuide.pdf $(IZPACK_SAMPLE)/hets/doc/  ;\
 	$(MAKE) release ;\
-	mv HetCATS.tar $(IZPACK_SAMPLE)/src/
+	mv Hets.tar $(IZPACK_SAMPLE)/src/HetCATS.tar
 	@cd $(IZPACK_SAMPLE)/src/ ; $(RM) -r HetCATS ; \
 	$(TAR) xvf HetCATS.tar ; $(TAR) cvfj HetCATS.tar.bz2 HetCATS  ;\
 	$(RM) -r HetCATS.tar HetCATS programatica uni
