CspCASL - tweaking pretty printer git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@8458 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/CspCASL/Makefile
+++ b/CspCASL/Makefile
@@ -43,7 +43,7 @@ testwrap:	$(SOURCES)
 		make -C .. CspCASL/testwrap
 
 test:		testwrap
-		@./testwrap -t test/scratch.testcases
+		@./testwrap -t test/process.testcases
 
 testi:
 		ghci $(GHCOPTS) testwrap
