open isabelle with emacs fpr apple-darwin git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@8742 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/hets.in
+++ b/hets.in
@@ -28,7 +28,10 @@ else if [ ! -d "$ISABELLE_HOME" ]
 fi
 
 if [ -z "$HETS_ISABELLE" ] ; then
-    HETS_ISABELLE=$ISABELLE_HOME/Isabelle/bin/isabelle-interface
+    case `uname -s` in
+	Darwin) HETS_ISABELLE="$ISABELLE_HOME/Isabelle/bin/isabelle-interface -p /Applications/Emacs.app/Contents/MacOS/Emacs ";;
+	*) HETS_ISABELLE=$ISABELLE_HOME/Isabelle/bin/isabelle-interface;;
+    esac
 fi
 
 if [ -d $INSTALL_PATH/CASL-lib ] ; then
