replaced author with contact email git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@8758 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/hets.in
+++ b/hets.in
@@ -1,6 +1,6 @@
 #!/bin/bash
 
-### author: Klaus Lüttich <luettich@tzi.de>
+### contact: hets-devel@informatik.uni-bremen.de
 
 ### a script that sets all HETS_*- and UNI*-variables according to the
 ### installation directory or according binaries found during the
