CspCASL - working on outermost concrete syntax of ccspec parsing git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@8871 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/CspCASL/Makefile
+++ b/CspCASL/Makefile
@@ -42,8 +42,11 @@ nuke:		clean
 testwrap:	$(SOURCES)
 		make -C .. CspCASL/testwrap
 
+ccparse:	ccparse.hs $(SOURCES) Print_CspCASL_Isabelle.hs
+		make -C .. CspCASL/ccparse
+
 test:		testwrap
-		@./testwrap -t test/process.testcases
+		@./testwrap -d test/tcs1.cspcasl
 
 testi:
 		ghci $(GHCOPTS) testwrap
