CspCASL - starting to expand process part beyond single process definition git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@8872 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/CspCASL/Makefile
+++ b/CspCASL/Makefile
@@ -46,7 +46,7 @@ ccparse:	ccparse.hs $(SOURCES) Print_CspCASL_Isabelle.hs
 		make -C .. CspCASL/ccparse
 
 test:		testwrap
-		@./testwrap -d test/tcs1.cspcasl
+		@./testwrap -d -c test
 
 testi:
 		ghci $(GHCOPTS) testwrap
