Debuging ToRacer translator. git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@8879 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/GMP/Makefile
+++ b/GMP/Makefile
@@ -1,5 +1,11 @@
 call:
 	./ghc-call
 
+racer:
+	ghc --make -i.. ToRacer.hs
+
+lwb:
+	ghc --make -i.. LWBParser.hs
+
 clean:
-	rm main *.hi *.o
+	rm main LWBParser ToRacer *.hi *.o
