Graded ML inequality solver acts as expected. More testing and debugging will follow. git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@9087 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/GMP/Makefile
+++ b/GMP/Makefile
@@ -8,4 +8,7 @@ lwb:
 	ghc --make -i.. LWBParser.hs
 
 clean:
-	rm main LWBParser ToRacer *.hi *.o
+	rm main *.hi *.o
+
+distclean:
+	rm main *.hi *.o *~ LWBParser ToRacer
