Tester for the inequality solver. git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@9133 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/GMP/Makefile
+++ b/GMP/Makefile
@@ -4,6 +4,9 @@ call:
 racer:
 	ghc --make -i.. ToRacer.hs
 
+tester:
+	ghc --make -i.. Tester.hs
+
 lwb:
 	ghc --make -i.. LWBParser.hs
 
@@ -11,4 +14,4 @@ clean:
 	rm main *.hi *.o
 
 distclean:
-	rm main *.hi *.o *~ LWBParser ToRacer
+	rm main *.hi *.o *~ LWBParser ToRacer Tester
