made haddock go through for ghc-6.8.1 git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@9146 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/haifa-lite/haifa.cabal
+++ b/haifa-lite/haifa.cabal
@@ -25,7 +25,7 @@ Library
     build-depends: base >= 3.0, array, containers, old-time
   else
     build-depends: base < 3.0
-  extensions:
+  extensions:CPP,
         MultiParamTypeClasses,
         FunctionalDependencies,
         UndecidableInstances,
