Tester file renamed and makefile modified git-svn-id: https://svn-agbkb.informatik.uni-bremen.de/Hets/trunk@9180 cec4b9c1-7d33-0410-9eda-942365e851bb

--- a/GMP/Makefile
+++ b/GMP/Makefile
@@ -2,16 +2,16 @@ call:
 	./ghc-call
 
 racer:
-	ghc --make -i.. ToRacer.hs
+	ghc --make -i.. ToRacer.hs -o toRacer
 
 tester:
-	ghc --make -i.. Tester.hs
+	ghc --make -i.. Tester4IneqSolv.hs -o isTester
 
 lwb:
-	ghc --make -i.. LWBParser.hs
+	ghc --make -i.. LWBParser.hs -o lwbParser
 
 clean:
 	rm main *.hi *.o
 
 distclean:
-	rm main *.hi *.o *~ LWBParser ToRacer Tester
+	rm main *.hi *.o *~ lwbParser toRacer isTester
